{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 52,
  "lineage": "7b7cd20e-0301-087c-fdc0-bbca6506055f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SDTD_instance_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-04c9b243856b8a581",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-master-role",
            "id": "i-04c9b243856b8a581",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1f83663eb012c28",
            "private_dns": "ip-10-0-0-43.ec2.internal",
            "private_ip": "10.0.0.43",
            "public_dns": "ec2-35-172-192-2.compute-1.amazonaws.com",
            "public_ip": "35.172.192.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bcb6f72fba28d6a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dcdfb5e37382f05"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aa5f17a8f844762",
            "tags": {
              "Name": "k8s-master-ec2-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcdfb5e37382f05"
            ]
          },
          "dependencies": [
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SDTD_instance_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-009f07190fe5a11ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-role",
            "id": "i-009f07190fe5a11ad",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096a08229fd2262db",
            "private_dns": "ip-10-0-0-151.ec2.internal",
            "private_ip": "10.0.0.151",
            "public_dns": "ec2-18-234-113-227.compute-1.amazonaws.com",
            "public_ip": "18.234.113.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f37c239e5a85024c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dcdfb5e37382f05"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aa5f17a8f844762",
            "tags": {
              "Name": "k8s-worker-1-ec2-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcdfb5e37382f05"
            ]
          },
          "dependencies": [
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SDTD_instance_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:563825153145:instance/i-08b1a0868361f5595",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-role",
            "id": "i-08b1a0868361f5595",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee9aa561f9c74876",
            "private_dns": "ip-10-0-0-55.ec2.internal",
            "private_ip": "10.0.0.55",
            "public_dns": "ec2-52-90-165-165.compute-1.amazonaws.com",
            "public_ip": "52.90.165.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06edcd5a90d51ca1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dcdfb5e37382f05"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aa5f17a8f844762",
            "tags": {
              "Name": "k8s-worker-2-ec2-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dcdfb5e37382f05"
            ]
          },
          "dependencies": [
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SDTD_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:internet-gateway/igw-05e86e7c78e75db95",
            "id": "igw-05e86e7c78e75db95",
            "owner_id": "563825153145",
            "tags": {
              "Name": "k8s-cluster-igw-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-08f8ae4ec008d1ed1"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SDTD_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010b520079c9f0361",
            "owner_id": "563825153145",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e86e7c78e75db95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cluster-igw-rtb",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-08f8ae4ec008d1ed1"
          },
          "dependencies": [
            "aws_internet_gateway.SDTD_igw",
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SCTD_VPC_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa6bd470818c0e9e",
            "route_table_id": "rtb-010b520079c9f0361",
            "subnet_id": "subnet-05aa5f17a8f844762"
          },
          "dependencies": [
            "aws_internet_gateway.SDTD_igw",
            "aws_route_table.SDTD_rtb",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SDTD_VPC_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:security-group/sg-05dcdfb5e37382f05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dcdfb5e37382f05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-cluster-sg-sdtd",
            "name_prefix": "",
            "owner_id": "563825153145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-cluster-sg-sdtd"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f8ae4ec008d1ed1"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SDTD_VPC_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:subnet/subnet-05aa5f17a8f844762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05aa5f17a8f844762",
            "map_public_ip_on_launch": true,
            "owner_id": "563825153145",
            "tags": {
              "Name": "k8s-cluster-net-SDTD",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-08f8ae4ec008d1ed1"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SDTD_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563825153145:vpc/vpc-08f8ae4ec008d1ed1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a865c90d6b6a6fab",
            "default_route_table_id": "rtb-0f43e1cee4bdda51a",
            "default_security_group_id": "sg-00129a80ec185a1f4",
            "dhcp_options_id": "dopt-02432a78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f8ae4ec008d1ed1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f43e1cee4bdda51a",
            "owner_id": "563825153145",
            "tags": {
              "Name": "k8s-cluster-vpc-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    }
  ]
}